--- a/package.json
+++ b/package.json
@@ -54,5 +54,8 @@
     "ts-jest": "27.1.4",
     "ts-node": "~10.8.0",
     "typescript": "~4.7.2"
+  },
+  "engines": {
+    "node": ">20.11.0"
   }
 }
